--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,11 +14,12 @@
     </head>
     <body>
         <p class="text-center mt-4">
+            <a href="{{ path('app_home') }}" >Home</a>  |
             {% if app.user %}
-                <strong>{{ app.user.name }}</strong>
+                <strong>{{ app.user.name }}</strong>    |
                 <a href="{{ path('app_logout') }}" >Cerrar Sesión</a>
             {% else %}
-                <a href="{{ path('app_login') }}" >Login</a>
+                <a href="{{ path('app_login') }}" >Login</a>    |
                 <a href="{{ path('app_register') }}" >Registro</a>
             {% endif %}
         </p>
